Fix text alignment

--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -1,3 +1,8 @@
+#home {
+  flex-direction: column;
+  justify-content: center;
+}
+
 #home > h2 {
   text-align: start;
 }
